<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.asus_pc.todolist.vista.presentas.Fragmentos.LoginFragments">

    <ProgressBar
        android:layout_width="match_parent"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:indeterminate="true"
        android:visibility="invisible"/>

    <!-- TODO: Update blank fragment layout -->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="0dp"
            android:layout_gravity="center_horizontal"
            android:layout_weight="0.4"
            android:src="@mipmap/ic_launcher">
        </ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight ="0.6"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <EditText
                    android:id="@+id/txtEmailLogin"
                    android:hint="@string/email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textEmailAddress"/>

            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout


                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

                <EditText
                    android:id="@+id/txtPasswordLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/contraseña"
                    android:inputType="textPassword"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                style="@style/BtnAuthStyle"
                android:id="@+id/btnIngresarLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:paddingEnd="50dp"
                android:paddingStart="50dp"
                android:text="@string/ingresar"
                />

            <TextView
                android:id="@+id/txtRecordarContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:clickable="true"
                android:text="@string/recordar_contraseña"/>


        </LinearLayout>


    </LinearLayout>


    <Button
        android:id="@+id/btnCrearCuenta"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center"
        android:text="@string/registro"
        style="@style/BtnAuthStyle"
        />

</FrameLayout>
